Moving RdfWriter and friends to a separate component called Purtle.
"Purtle" stands for "PHP Turtle", since that's what the code for
generating RDF looks like.

This change does not modify any logic in the code, it just moves
files around and adjusts namespaces and test groups.

Bug: T94172
Change-Id: I23df09da6a8bab4d38d0f26e30575a878e08efd5

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,9 @@
 		],
 		"psr-4": {
 			"Wikibase\\Repo\\View\\": "repo/includes/View",
-			"Wikibase\\View\\": "view/src"
+			"Wikibase\\View\\": "view/src",
+		  	"Wikimedia\\Purtle\\": "purtle/src",
+		  	"Wikimedia\\Purtle\\Tests\\": "purtle/tests/phpunit"
 		}
 	}
 }
