--- a/composer.json
+++ b/composer.json
@@ -66,10 +66,10 @@
 			"repo/Wikibase.hooks.php"
 		],
 		"psr-4": {
-			"Wikibase\\Repo\\View\\": "repo/includes/View",
+			"Wikibase\\Repo\\View\\": "view/src",
 			"Wikibase\\View\\": "view/src",
-		  	"Wikimedia\\Purtle\\": "purtle/src",
-		  	"Wikimedia\\Purtle\\Tests\\": "purtle/tests/phpunit"
+			"Wikimedia\\Purtle\\": "purtle/src",
+			"Wikimedia\\Purtle\\Tests\\": "purtle/tests/phpunit"
 		}
 	}
 }
