--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
 			"repo/Wikibase.hooks.php"
 		],
 		"psr-4": {
-			"Wikibase\\Repo\\View\\": "repo/includes/View",
+			"Wikibase\\Repo\\View\\": "view/src",
 			"Wikibase\\View\\": "view/src"
 		}
 	}
