--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
 			"repo/Wikibase.hooks.php"
 		],
 		"psr-4": {
-			"Wikibase\\View\\": "view/src"
+			"Wikibase\\View\\": "view/src",
+			"Wikibase\\Template\\": "view/src/Template"
 		}
 	}
 }
