Move Wikibase\Template to Wikibase\View\Template
Change-Id: Id694b9f530fb66bcea16ea4679a216456d246e85

--- a/composer.json
+++ b/composer.json
@@ -66,8 +66,7 @@
 			"repo/Wikibase.hooks.php"
 		],
 		"psr-4": {
-			"Wikibase\\View\\": "view/src",
-			"Wikibase\\Template\\": "view/src/Template"
+			"Wikibase\\View\\": "view/src"
 		}
 	}
 }
