--- a/lib/packages/wikibase/data-model-serialization/.travis.yml
+++ b/lib/packages/wikibase/data-model-serialization/.travis.yml
@@ -11,9 +11,9 @@ matrix:
     - env: DM=~2.4
       php: 5.4
     - env: DM=~2.4@dev
-      php: 5.5
-    - env: DM=~2.4
       php: 5.6
+    - env: DM=~2.4
+      php: 7
     - env: DM=~2.4
       php: hhvm
     - env: DM=~2.4@dev
@@ -23,8 +23,10 @@ matrix:
   allow_failures:
     - php: hhvm-nightly
 
+sudo: false
+
 before_script:
-  - composer require "wikibase/data-model=$DM" --prefer-source
+  - travis_retry composer require "wikibase/data-model=$DM" --prefer-source
 
 script:
   - phpunit
