--- a/lib/packages/wikibase/data-model/composer.json
+++ b/lib/packages/wikibase/data-model/composer.json
@@ -28,7 +28,8 @@
 		"data-values/data-values": "~0.1|~1.0"
 	},
 	"require-dev": {
-		"squizlabs/php_codesniffer": "~2.1"
+		"squizlabs/php_codesniffer": "~2.1",
+		"phpmd/phpmd": "~2.1"
 	},
 	"autoload": {
 		"files" : [
@@ -49,11 +50,18 @@
 			"phpunit"
 		],
 		"cs": [
-			"vendor/bin/phpcs src/* tests/* --standard=phpcs.xml --extensions=php -sp"
+			"composer phpcs",
+			"composer phpmd"
 		],
 		"ci": [
 			"composer test",
 			"composer cs"
+		],
+		"phpcs": [
+			"vendor/bin/phpcs src/* tests/* --standard=phpcs.xml --extensions=php -sp"
+		],
+		"phpmd": [
+			"vendor/bin/phpmd src/ text phpmd.xml"
 		]
 	}
 }
