Show component version on Special:Version when used with MediaWiki

--- a/lib/packages/wikibase/data-model-serialization/composer.json
+++ b/lib/packages/wikibase/data-model-serialization/composer.json
@@ -41,7 +41,10 @@
 	"autoload": {
 		"psr-4": {
 			"Wikibase\\DataModel\\": "src/"
-		}
+		},
+		"files" : [
+			"mediawiki.php"
+		]
 	},
 	"extra": {
 		"branch-alias": {
